--- a/Bouncing Ball/build.gradle
+++ b/Bouncing Ball/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "com.example.asynctask"
+        applicationId "com.example.asynctask2"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
